--- a/style.css
+++ b/style.css
@@ -98,3 +98,13 @@ body{
     top:100px;
     background-color: burlywood;
 }
+.frames:nth-child(4)
+{
+    top:220px;
+    background-color: skyblue;
+}
+.frames.frames:nth-child(5)
+{
+    top:340px;
+    background-color: goldenrod;
+}
